software-center (1.1.1) UNRELEASEDlucid; urgency=low

  * Hide packages that are also part of a application. This
    means that abiword will only show up once in the center
    (as a application) and not as a package at all. 
  * profiling and search improvements
  * merge lp:~benweissmann/software-center/search-greylist, many
    thanks
  * merge lp:~glatzor/software-center/glatzor, many thanks

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 01 Dec 2009 17:35:54 +0100

software-center (1.1) lucid; urgency=low

  [ Michael Vogt ]
  * merged from Andrew Higginson, many thanks
    - fix hardcoded fonts (LP:#456604)
    - changed paste menu item to be ctrl+V
  * merged from Luke Symes, many thanks:
    - add suppoprt for authenticated proxies
  * softwarecenter/view/appdetailsview.py:
    - support uris in the app description (LP: #454246)
    - fix in details view
    - use regexp 
    - fix test
  * softwarecenter/view/dialogs.py:
    - make removal dialog modal (LP: #455327)
  * debian/control:
    - add recommends on python-launchpad-integration
  * softwarecenter/distro/Ubuntu.py:
    - add distro backend class that dynamically detects what distro
      to use and move distro specifc stuff (like screenshot url etc)
      there
    - move maitainance end calculation here
  * softwarecenter/view/softwarepane.py:
    - default to new pathbar
  * softwarecenter/backend/aptd.py:
    - move the aptdaemon backend code here
  * softwarecenter/utils.py:
    - move proxy code into a generic utility function
  * debian/control:
    - add recommends to apt-xapian-index to enable support for
      non-application packages
  * merge the lp:~mvo/software-center/non-apps branch

  [ Julian Andres Klode ]
  * softwarecenter/distro/Debian.py:
    - introduce the Debian version of Ubuntu.py.
  * softwarecenter/view/{catview.py,appdetailsview.py}:
    - return the int of self._get_font_description_property("weight")
      if it has no member named 'real'.