@@ -91,6 +91,23 @@ class StoreDatabase(gobject.GObject):
         self.open()
         self.emit("reopen")
 
+    def _comma_expansion(self, search_term):
+        """do expansion of "," in a search term, see
+        https://wiki.ubuntu.com/SoftwareCenter?action=show&redirect=SoftwareStore#Searching%20for%20multiple%20package%20names
+        """
+        # expand "," to APpkgname AND
+        if "," in search_term:
+            query = xapian.Query()
+            for pkgname in search_term.split(","):
+                # not a pkgname
+                if not re.match("[0-9a-z\.\-]+", pkgname):
+                    return None
+                if pkgname:
+                    query = xapian.Query(xapian.Query.OP_OR, query, 
+                                         xapian.Query("XP"+pkgname))
+            return query
+        return None
+
     def get_query_from_search_entry(self, search_term):
         """ get xapian.Query from a search term string """
         # we cheat and return a match-all query for single letter searches
@@ -105,8 +122,15 @@ class StoreDatabase(gobject.GObject):
                 logging.debug("greylist changed search term: '%s'" % search_term)
         # restore query if it was just greylist words
         if search_term == '':
+            logging.debug("grey-list replaced all terms, restoring")
             search_term = orig_search_term
         
+        # check if we need to do comma expansion instead of a regular
+        # query
+        query = self._comma_expansion(search_term)
+        if query:
+            return qery
+
         # get a real query
         query = self.xapian_parser.parse_query(search_term, 
                                                xapian.QueryParser.FLAG_PARTIAL|
@@ -167,3 +191,21 @@ class StoreDatabase(gobject.GObject):
         return self.xapiandb.get_doccount()
 
 
+if __name__ == "__main__":
+    import apt
+    import sys
+
+    db = StoreDatabase("/var/cache/software-center/xapian", apt.Cache())
+    db.open()
+    if len(sys.argv) < 2:
+        search = "apt,apport"
+    else:
+        search = sys.argv[1]
+    query = db.get_query_from_search_entry(search)
+    print query
+    enquire = xapian.Enquire(db.xapiandb)
+    enquire.set_query(query)
+    matches = enquire.get_mset(0, len(db))
+    for m in matches:
+        doc = m[xapian.MSET_DOCUMENT]
+        print doc.get_data()
