@@ -7,6 +7,9 @@ software-center (1.1.1) UNRELEASEDlucid; urgency=low
   * merge lp:~benweissmann/software-center/search-greylist, many
     thanks
   * merge lp:~glatzor/software-center/glatzor, many thanks
+  * softwarecenter/db/database.py:
+    - support comma expansion as in https://wiki.ubuntu.com/SoftwareCenter
+      under "Searching for multiple package names"
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 01 Dec 2009 17:35:54 +0100
 
